@@ -581,6 +581,7 @@ if env["host"] in ["x86_64-nacl", "i686-nacl"]:
 client_env.WesnothProgram("wesnoth", wesnoth_objects, have_client_prereqs)
 
 campaignd_sources = Split("""
+    campaign_server/blacklist.cpp
     server/input_stream.cpp
     """)
 
