@@ -1,4 +1,6 @@
 Version 1.13.0-dev:
+ * Add-ons server:
+   * Add-on metadata pattern blacklisting implemented.
  * AI:
    * New Micro AI: Fast AI
    * Messenger Escort Micro AI: new optional parameters [filter],
